testsuite/tests/typecheck/should_fail/T15807.stderr

T15807.hs:12:12: error:
    • Expected kind ‘f -> *’, but ‘f’ has kind ‘*’
    • In the type ‘f a’
      In the definition of data constructor ‘MkApp’
      In the data declaration for ‘App’
